# emerald

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.grafana  Dockerfile.prometheus  LICENSE  Makefile  README.md  SECURITY.md  TESTNET_INIT_DESIGN.md  compose.yaml  compose_ethrex.yaml  config.example.toml  config.toml  emerald-compose.yaml  flake.nix  foundry.toml  reth-node-compose.yaml  taplo.toml
.changelog/: config.toml
.changelog/unreleased/breaking-changes/: 138-state-contains-eth-config.md  138-upgrade-reth-to-1.9.3.md  208-value-prune-config.md  215-el-config-struct.md
.changelog/unreleased/features/: 126-height-replay-on-crash.md  136-deployment-with-more-nodes.md  138-state-contains-eth-config.md  138-support-eth-fusaka-fork.md  138-support-eth-osaka-fork.md  143-ops-config-customization.md  208-value-prune-config.md
.changelog/unreleased/fixes/: 173-prague-envelopetype.md  178-fix-streams-map-purge.md  208-height-replay-full-block.md  210-prune-block-headers.md  210-sync-value-handling.md  213-cli-fix-evm-genesis-path.md  4380-bump-alloy-versions.md
.changelog/unreleased/improvements/: 210-cache-earliest-heights.md
.changelog/v0.1.0/features/: 109-custom-reth-timestamp-validation.md  12-poa-contracts.md  125-reth-block-persisting.md  13-node-sync-support.md  36-etherium-signing-key.md  (+3 more)
.changelog/v0.2.0/: summary.md
.changelog/v0.2.1/: summary.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  03-docs-request.yml  04-issue-template.md  bug_report.md
.github/workflows/: docker.yml  emerald.yml  foundry.yml  lint.yml  malaketh.yml  reth-build.yml  test.yml  test_foundry.yml
.testnet/: testnet_config.toml
app/: Cargo.toml
app/src/: app.rs  bootstrap.rs  lib.rs  main.rs  metrics.rs  node.rs  payload.rs  state.rs  store.rs  streaming.rs  sync_handler.rs  validator_set_manager.rs  validators.rs
app/src/store/: keys.rs
assets/: .gitignore
cli/: Cargo.toml  example-reth-config.toml
cli/src/: args.rs  config.rs  error.rs  file.rs  lib.rs  logging.rs  metrics.rs  new.rs
cli/src/cmd/: distributed_testnet.rs  init.rs  mod.rs  show_pubkey.rs  start.rs  testnet.rs
cli/src/cmd/testnet/: add_node.rs  destroy.rs  generate.rs  init.rs  mod.rs  reth.rs  rm.rs  rpc.rs  start.rs  start_node.rs  status.rs  stop.rs  stop_node.rs  types.rs
cli/src/cmd/testnet/config/: mod.rs  reth_config.rs
cli/src/cmd/testnet/utils/: status.rs
cli/src/utils/: retry.rs
contracts/: Cargo.toml  build.rs
contracts/src/: lib.rs  validator_manager.rs
custom-reth/: Cargo.toml  Dockerfile
custom-reth/src/: consensus.rs  main.rs
docs/: spammer-templates-guide.md
docs/local-testnet/: README.md
docs/operational-docs/: .dockerignore  .gitignore  Dockerfile  README.md  book.toml
docs/specs/: Syncing.md
engine/: Cargo.toml
engine/src/: auth.rs  engine.rs  engine_rpc.rs  ethereum_rpc.rs  json_structures.rs
example/: README.md  foundry.toml
example/script/: Example.s.sol
example/src/: Example.sol
example/test/: ExampleTest.t.sol
monitoring/: prometheus-syncing.yml  prometheus.yml
scripts/: add_dynamic_peers.sh  add_peers.sh  deploy_contract.sh  generate_compose.sh  generate_testnet_config.sh  kill_node.sh  restart_node.sh  reth_pruned.toml  spawn-tmux.bash  spawn.bash  start_ethrex.sh  validator-manager.sh
scripts/helpers/: check_nonce_gaps.sh  compare_nodes.sh
solidity/: README.md  foundry.toml
solidity/script/: Counter.s.sol  Example.s.sol  ExampleERC20.s.sol  ValidatorSet.s.sol
solidity/src/: Counter.sol  ExampleERC20.sol  ValidatorManager.sol  ValidatorSet.sol
solidity/test/: Counter.t.sol  ExampleERC20.t.sol  ExampleERC20Test.t.sol  ExampleTest.t.sol  ValidatorManager.t.sol  ValidatorSet.t.sol  ValidatorSetTest.t.sol
specs/: emerald.qnt  emerald_app.qnt  emerald_mbt.qnt  emerald_tests.qnt  emerald_types.qnt
test/: Cargo.toml
test/app/: Cargo.toml  config.toml
test/app/src/: app.rs  config.rs  node.rs  state.rs  store.rs  streaming.rs
test/app/src/store/: keys.rs
test/framework/: Cargo.toml
test/framework/src/: lib.rs  node.rs  params.rs
test/proto/: consensus.proto  sync.proto
test/src/: decided_value.rs  middleware.rs  proposal_part.rs  signing.rs
test/src/codec/json/: mod.rs  raw.rs
test/src/codec/proto/: mod.rs
test/tests/it/: example.rs  main.rs
tests/mbt/: .gitignore  Cargo.toml  run-tests.sh  start-reth.sh
tests/mbt/config/: emerald-mbt.toml
tests/mbt/src/: driver.rs  hist.rs  history.rs  lib.rs  reth.rs  reth_manager.rs  runtime.rs  state.rs  sut.rs  tests.rs
tests/mbt/src/driver/: consensus_ready.rs  environment.rs  handle_decided.rs  handle_get_decided.rs  handle_get_value.rs  handle_process_synced_value.rs  handle_received_proposal.rs  handle_started_round.rs  init.rs  perform.rs  rt.rs  runtime.rs  utils.rs
tests/mbt/src/sut/: consensus_ready.rs  decided.rs  get_decided.rs  get_value.rs  process_synced_value.rs  receive_proposal.rs  started_round.rs
types/: Cargo.toml  build.rs
types/proto/: consensus.proto  liveness.proto  sync.proto
types/src/: address.rs  context.rs  genesis.rs  height.rs  lib.rs  proposal.rs  proposal_part.rs  proposer_selector.rs  retry_config.rs  signing.rs  validator_set.rs  value.rs  vote.rs
types/src/codec/proto/: mod.rs
types/src/signing/: bls12381.rs  ed25519.rs  mod.rs  secp256k1.rs
types/src/utils/: validators.rs
types/tests/: address.rs
utils/: Cargo.toml
utils/examples/: exchange_transactions.yaml  generated_dexalot.yaml  generated_rubicon.yaml  rubicon_dex_transactions.yaml  simple_transactions.yaml
utils/scripts/: analyze_gas.py
utils/src/: dex_templates.rs  dexalot_generator.rs  genesis.rs  lib.rs  load.rs  main.rs  mempool_monitor.rs  modify_config.rs  poa.rs  rubicon_generator.rs  spammer.rs  tx.rs
utils/src/validator_manager/: contract.rs  error.rs  mod.rs  storage.rs  tests.rs  types.rs
utils/src/validator_set/: contract.rs  error.rs  mod.rs  storage.rs  tests.rs  types.rs
utils/utils/examples/: generated_rubicon.yaml
(+55 files in other folders)
