[package]
name         = "emerald"
version      = { workspace = true }
edition      = { workspace = true }
repository   = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }
publish      = { workspace = true }

[lints]
workspace = true

[dependencies]
malachitebft-eth-types   = { workspace = true }
malachitebft-eth-cli     = { workspace = true }
malachitebft-eth-engine  = { workspace = true }
malachitebft-app-channel = { workspace = true }
malachitebft-proto       = { workspace = true }
emerald-contracts        = { workspace = true }

alloy-provider         = { version = "1.4.3" }
alloy-genesis          = "1.4.3"
alloy-primitives       = { workspace = true }
alloy-consensus        = { workspace = true }
alloy-rpc-types-eth    = { workspace = true }
alloy-rpc-types-engine = { workspace = true }
ethereum_ssz           = "0.9.1"

libp2p-identity = { version = "0.2", features = [ "secp256k1" ] }
k256            = { workspace = true }

hex             = { workspace = true }
async-trait     = { workspace = true }
bytes           = { workspace = true }
caches          = "0.3"
derive-where    = { workspace = true }
color-eyre      = { workspace = true }
prost           = { workspace = true }
rand            = { workspace = true }
redb            = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
sha3            = { workspace = true }
thiserror       = { workspace = true }
tokio           = { workspace = true }
toml            = { workspace = true }
tracing         = { workspace = true }
url             = { workspace = true }
humantime-serde = { workspace = true }

[dev-dependencies]
tempfile = "3"
