[package]
name       = "malachitebft-eth-cli"
version    = { workspace = true }
edition    = { workspace = true }
repository = { workspace = true }
license    = { workspace = true }
publish    = { workspace = true }

[lints]
workspace = true

[dependencies]
malachitebft-core-types = { workspace = true }
malachitebft-eth-types  = { workspace = true }
malachitebft-metrics    = { workspace = true }
malachitebft-config     = { workspace = true }
malachitebft-app        = { workspace = true }

axum = { workspace = true }
base64 = "0.22"
bytesize = { workspace = true }
clap = { workspace = true, features = [ "derive", "env" ] }
color-eyre = { workspace = true }
config = { workspace = true }
directories = { workspace = true }
hex = "0.4"
itertools = { workspace = true }
tokio = { workspace = true, features = [ "full" ] }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "env-filter",
  "fmt",
  "json",
] }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
toml = { workspace = true }
