[package]
name         = "emerald-contracts"
version      = { workspace = true }
edition      = { workspace = true }
repository   = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }
publish      = { workspace = true }

[dependencies]
alloy-sol-types  = { workspace = true }
alloy-primitives = { workspace = true }
alloy-contract   = { workspace = true }

[lints]
workspace = true
