[workspace]
# Keep this crate out of the parent workspace

[package]
name         = "custom-reth"
version      = "0.0.2"
edition      = "2021"
rust-version = "1.83"
license      = "Apache-2.0"
repository   = "https://github.com/informalsystems/emerald"
publish      = false

[dependencies]
# Reth dependencies, version ghcr.io/paradigmxyz/reth:v1.9.3
reth-ethereum            = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", features = [ "node", "consensus", "evm", "cli" ] }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-primitives-traits   = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-engine-primitives   = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-node-api            = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-node-builder        = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-payload-primitives  = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
alloy-rpc-types-engine   = { version = "1.4.3" }


vergen      = "=9.0.4"
vergen-git2 = "=1.0.5"

eyre = "0.6"

[[bin]]
name = "custom-reth"
path = "src/main.rs"
