[package]
name         = "malachitebft-eth-types"
version      = { workspace = true }
edition      = { workspace = true }
repository   = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }
publish      = { workspace = true }

[dependencies]
malachitebft-app             = { workspace = true }
malachitebft-codec           = { workspace = true }
malachitebft-core-types      = { workspace = true }
malachitebft-config          = { workspace = true }
malachitebft-core-consensus  = { workspace = true }
malachitebft-proto           = { workspace = true }
malachitebft-signing         = { workspace = true }
malachitebft-signing-ed25519 = { workspace = true, features = [ "rand", "serde" ] }
malachitebft-signing-ecdsa   = { workspace = true, features = [ "rand", "serde" ] }
malachitebft-sync            = { workspace = true }

async-trait     = { workspace = true }
blst            = { workspace = true }
bytes           = { workspace = true }
hex             = { workspace = true }
humantime-serde = "1.1"
prost           = { workspace = true }
prost-types     = { workspace = true }
rand            = { workspace = true }
serde           = { workspace = true, features = [ "derive", "rc" ] }
serde_json      = { workspace = true }
signature       = { workspace = true }

alloy-consensus  = { workspace = true }
alloy-primitives = { workspace = true, default-features = false, features = [ "serde" ] }
k256             = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }

[lints]
workspace = true
