[package]
name = "malachitebft-eth-test-framework"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]

malachitebft-app.workspace = true
malachitebft-app-channel.workspace = true
malachitebft-engine.workspace = true
malachitebft-eth-types.workspace = true
malachitebft-core-types.workspace = true
malachitebft-core-consensus.workspace = true
malachitebft-config.workspace = true
malachitebft-proto.workspace = true
malachitebft-signing-ed25519.workspace = true

malachitebft-eth-test-app.workspace = true
malachitebft-eth-test.workspace = true

async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
bytesize.workspace = true
derive-where.workspace = true
color-eyre.workspace = true
config.workspace = true

rand.workspace = true
serde.workspace = true
sha3.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
